KM-Vertically-Align-Text: Added flexbox to large screens to vertically align text. Changed loading of carousel to prevent sizing issue.

--- a/src/components/about/aboutPage.scss
+++ b/src/components/about/aboutPage.scss
@@ -39,6 +39,11 @@
   }
 }
 
+.about-page.page {
+  display: initial;
+  align-items: initial;
+}
+
 @media(min-width: $tablet-breakpoint) {
   .about-page {
     .page-header {
