--- a/src/components/home/homePage.scss
+++ b/src/components/home/homePage.scss
@@ -7,7 +7,7 @@
 
 @media(min-width: $tablet-breakpoint) {
   .button-container {
-    padding: 3% 0;
+    padding: 0;
   }
 }
 
